# c-lib

./: .gitignore  CMakeLists.txt  README.md  how-to-test.md
src/: DigitSum.hpp  Eratosthenes.hpp  Sample.hpp
test/: CMakeLists.txt  DigitSum.cpp  Eratosthenes.cpp  Sample.cpp
test/DigitSum/: 1.in  1.out
